Fixed overflow issue with code blocks

--- a/assets/sass/components/_code.scss
+++ b/assets/sass/components/_code.scss
@@ -2,6 +2,7 @@ pre {
   border: 1px solid rgba(0, 0, 0, 0.1);
   margin-bottom: 1.5em;
   padding: 1em;
+  overflow: auto;
 }
 
 code {
